[project]
name = "nanoPPO"
version = "0.13"
description = "A flexible and efficient implementation of the Proximal Policy Optimization (PPO) algorithm for reinforcement learning."
readme = "README.md"
authors = [{name = "James Liu"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.poetry]
name = "nanoPPO"
version = "0.13"
description = "A flexible and efficient implementation of the Proximal Policy Optimization (PPO) algorithm for reinforcement learning."
authors = ["James Liu"]
