[metadata]
name = nanoPPO
version = 0.1.post1
description = A flexible and efficient implementation of the Proximal Policy Optimization (PPO) algorithm for reinforcement learning.
author = James Liu
license = Apache-2.0
classifiers = 
    Development Status :: 4 - Beta

[options]
packages = nanoppo
install_requires = 
    # list your main dependencies here

[options.extras_require]
test = pytest

